# qnai-model

./: .gitignore  LICENSE  README.md  docker-compose.yaml  env_template  pyproject.toml
src/: cache.py  enums.py  logger.py  main.py  middlewares.py  settings.py
src/modules/generation/: schemas.py  service.py
