[tool.poetry]
name = "qnai-model"
version = "0.1.0"
description = "Model for QNAI Project"
authors = ["Temiloluwa Philip Ojo <codekagei@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qnai_model"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
